some more testing

--- a/sample.ipynb
+++ b/sample.ipynb
@@ -19,12 +19,17 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-21T21:43:41.841700Z",
-     "start_time": "2024-11-21T21:43:41.828407Z"
+     "end_time": "2024-11-21T21:52:12.180452Z",
+     "start_time": "2024-11-21T21:52:11.063520Z"
     }
    },
    "cell_type": "code",
-   "source": "print(\"Hello World!\")\n",
+   "source": [
+    "import pandas as pd\n",
+    "print(\"Hello World!\")\n",
+    "df = pd.DataFrame([1,2,3,4,5])\n",
+    "df"
+   ],
    "id": "fbc121e30a2defb3",
    "outputs": [
     {
@@ -33,17 +38,79 @@
      "text": [
       "Hello World!\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "   0\n",
+       "0  1\n",
+       "1  2\n",
+       "2  3\n",
+       "3  4\n",
+       "4  5"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "execution_count": 1
+   "execution_count": 2
   },
   {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "test",
-   "id": "8a85fc2153956b0d"
+   "source": "",
+   "id": "9bebc5eafa9d4602"
   }
  ],
  "metadata": {
