added csv files

--- a/sample.ipynb
+++ b/sample.ipynb
@@ -19,16 +19,20 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-21T21:52:12.180452Z",
-     "start_time": "2024-11-21T21:52:11.063520Z"
+     "end_time": "2024-11-21T22:02:10.011373Z",
+     "start_time": "2024-11-21T22:02:09.973988Z"
     }
    },
    "cell_type": "code",
    "source": [
     "import pandas as pd\n",
     "print(\"Hello World!\")\n",
-    "df = pd.DataFrame([1,2,3,4,5])\n",
-    "df"
+    "before = pd.read_csv(\"Before_Covid.csv\")\n",
+    "before.head()\n",
+    "during = pd.read_csv(\"During_Covid.csv\")\n",
+    "during.head()\n",
+    "after = pd.read_csv(\"After_Covid.csv\")\n",
+    "after.head()"
    ],
    "id": "fbc121e30a2defb3",
    "outputs": [
@@ -42,12 +46,26 @@
     {
      "data": {
       "text/plain": [
-       "   0\n",
-       "0  1\n",
-       "1  2\n",
-       "2  3\n",
-       "3  4\n",
-       "4  5"
+       "              Source.Name     open_time      open      high       low  \\\n",
+       "0  BTCUSDT-1d-2023-04.csv  1.680310e+12  28460.10  28815.32  28218.91   \n",
+       "1  BTCUSDT-1d-2023-04.csv  1.680390e+12  28449.00  28530.76  27854.49   \n",
+       "2  BTCUSDT-1d-2023-04.csv  1.680480e+12  28177.46  28500.29  27265.00   \n",
+       "3  BTCUSDT-1d-2023-04.csv  1.680570e+12  27793.56  28440.30  27654.08   \n",
+       "4  BTCUSDT-1d-2023-04.csv  1.680650e+12  28157.88  28770.27  27828.89   \n",
+       "\n",
+       "      close      volume    close_time  quote_volume  count  \\\n",
+       "0  28452.75   913.66801  1.680390e+12  2.601121e+07  21547   \n",
+       "1  28176.40  1189.99710  1.680480e+12  3.353769e+07  23290   \n",
+       "2  27806.67  3575.72719  1.680570e+12  1.001794e+08  67011   \n",
+       "3  28164.56  2375.33862  1.680650e+12  6.675797e+07  48316   \n",
+       "4  28166.68  2440.36142  1.680740e+12  6.913046e+07  48945   \n",
+       "\n",
+       "   taker_buy_base_volume  taker_buy_quote_volume  \n",
+       "0              467.83846             13319717.48  \n",
+       "1              595.05282             16770796.70  \n",
+       "2             1813.07087             50798338.39  \n",
+       "3             1226.03488             34463050.26  \n",
+       "4             1263.44967             35797236.94  "
       ],
       "text/html": [
        "<div>\n",
@@ -68,41 +86,107 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
+       "      <th>Source.Name</th>\n",
+       "      <th>open_time</th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>close_time</th>\n",
+       "      <th>quote_volume</th>\n",
+       "      <th>count</th>\n",
+       "      <th>taker_buy_base_volume</th>\n",
+       "      <th>taker_buy_quote_volume</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
+       "      <td>BTCUSDT-1d-2023-04.csv</td>\n",
+       "      <td>1.680310e+12</td>\n",
+       "      <td>28460.10</td>\n",
+       "      <td>28815.32</td>\n",
+       "      <td>28218.91</td>\n",
+       "      <td>28452.75</td>\n",
+       "      <td>913.66801</td>\n",
+       "      <td>1.680390e+12</td>\n",
+       "      <td>2.601121e+07</td>\n",
+       "      <td>21547</td>\n",
+       "      <td>467.83846</td>\n",
+       "      <td>13319717.48</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
+       "      <td>BTCUSDT-1d-2023-04.csv</td>\n",
+       "      <td>1.680390e+12</td>\n",
+       "      <td>28449.00</td>\n",
+       "      <td>28530.76</td>\n",
+       "      <td>27854.49</td>\n",
+       "      <td>28176.40</td>\n",
+       "      <td>1189.99710</td>\n",
+       "      <td>1.680480e+12</td>\n",
+       "      <td>3.353769e+07</td>\n",
+       "      <td>23290</td>\n",
+       "      <td>595.05282</td>\n",
+       "      <td>16770796.70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3</td>\n",
+       "      <td>BTCUSDT-1d-2023-04.csv</td>\n",
+       "      <td>1.680480e+12</td>\n",
+       "      <td>28177.46</td>\n",
+       "      <td>28500.29</td>\n",
+       "      <td>27265.00</td>\n",
+       "      <td>27806.67</td>\n",
+       "      <td>3575.72719</td>\n",
+       "      <td>1.680570e+12</td>\n",
+       "      <td>1.001794e+08</td>\n",
+       "      <td>67011</td>\n",
+       "      <td>1813.07087</td>\n",
+       "      <td>50798338.39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4</td>\n",
+       "      <td>BTCUSDT-1d-2023-04.csv</td>\n",
+       "      <td>1.680570e+12</td>\n",
+       "      <td>27793.56</td>\n",
+       "      <td>28440.30</td>\n",
+       "      <td>27654.08</td>\n",
+       "      <td>28164.56</td>\n",
+       "      <td>2375.33862</td>\n",
+       "      <td>1.680650e+12</td>\n",
+       "      <td>6.675797e+07</td>\n",
+       "      <td>48316</td>\n",
+       "      <td>1226.03488</td>\n",
+       "      <td>34463050.26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5</td>\n",
+       "      <td>BTCUSDT-1d-2023-04.csv</td>\n",
+       "      <td>1.680650e+12</td>\n",
+       "      <td>28157.88</td>\n",
+       "      <td>28770.27</td>\n",
+       "      <td>27828.89</td>\n",
+       "      <td>28166.68</td>\n",
+       "      <td>2440.36142</td>\n",
+       "      <td>1.680740e+12</td>\n",
+       "      <td>6.913046e+07</td>\n",
+       "      <td>48945</td>\n",
+       "      <td>1263.44967</td>\n",
+       "      <td>35797236.94</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "execution_count": 4
   },
   {
    "metadata": {},
