Revert "added csv files"
This reverts commit a03a649c

--- a/sample.ipynb
+++ b/sample.ipynb
@@ -2,147 +2,115 @@
  "cells": [
   {
    "metadata": {},
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "source": [
-    "{\n",
-    " \"cells\": [\n",
-    "  {\n",
-    "   \"metadata\": {},\n",
-    "   \"cell_type\": \"markdown\",\n",
-    "   \"source\": [\n",
-    "    \"# This is a sample Jupyter Notebook\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"Below is an example of a code cell. \\n\",\n",
-    "    \"Put your cursor into the cell and press Shift+Enter to execute it and select the next one, or click 'Run Cell' button.\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"Press Double Shift to search everywhere for classes, files, tool windows, actions, and settings.\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"To learn more about Jupyter Notebooks in PyCharm, see [help](https://www.jetbrains.com/help/pycharm/ipython-notebook-support.html).\\n\",\n",
-    "    \"For an overview of PyCharm, go to Help -> Learn IDE features or refer to [our documentation](https://www.jetbrains.com/help/pycharm/getting-started.html).\"\n",
-    "   ],\n",
-    "   \"id\": \"8a77807f92f26ee\"\n",
-    "  },\n",
-    "  {\n",
-    "   \"metadata\": {\n",
-    "    \"ExecuteTime\": {\n",
-    "     \"end_time\": \"2024-11-21T21:52:12.180452Z\",\n",
-    "     \"start_time\": \"2024-11-21T21:52:11.063520Z\"\n",
-    "    }\n",
-    "   },\n",
-    "   \"cell_type\": \"code\",\n",
-    "   \"source\": [\n",
-    "    \"import pandas as pd\\n\",\n",
-    "    \"print(\\\"Hello World!\\\")\\n\",\n",
-    "    \"df = pd.DataFrame([1,2,3,4,5])\\n\",\n",
-    "    \"df\"\n",
-    "   ],\n",
-    "   \"id\": \"fbc121e30a2defb3\",\n",
-    "   \"outputs\": [\n",
-    "    {\n",
-    "     \"name\": \"stdout\",\n",
-    "     \"output_type\": \"stream\",\n",
-    "     \"text\": [\n",
-    "      \"Hello World!\\n\"\n",
-    "     ]\n",
-    "    },\n",
-    "    {\n",
-    "     \"data\": {\n",
-    "      \"text/plain\": [\n",
-    "       \"   0\\n\",\n",
-    "       \"0  1\\n\",\n",
-    "       \"1  2\\n\",\n",
-    "       \"2  3\\n\",\n",
-    "       \"3  4\\n\",\n",
-    "       \"4  5\"\n",
-    "      ],\n",
-    "      \"text/html\": [\n",
-    "       \"<div>\\n\",\n",
-    "       \"<style scoped>\\n\",\n",
-    "       \"    .dataframe tbody tr th:only-of-type {\\n\",\n",
-    "       \"        vertical-align: middle;\\n\",\n",
-    "       \"    }\\n\",\n",
-    "       \"\\n\",\n",
-    "       \"    .dataframe tbody tr th {\\n\",\n",
-    "       \"        vertical-align: top;\\n\",\n",
-    "       \"    }\\n\",\n",
-    "       \"\\n\",\n",
-    "       \"    .dataframe thead th {\\n\",\n",
-    "       \"        text-align: right;\\n\",\n",
-    "       \"    }\\n\",\n",
-    "       \"</style>\\n\",\n",
-    "       \"<table border=\\\"1\\\" class=\\\"dataframe\\\">\\n\",\n",
-    "       \"  <thead>\\n\",\n",
-    "       \"    <tr style=\\\"text-align: right;\\\">\\n\",\n",
-    "       \"      <th></th>\\n\",\n",
-    "       \"      <th>0</th>\\n\",\n",
-    "       \"    </tr>\\n\",\n",
-    "       \"  </thead>\\n\",\n",
-    "       \"  <tbody>\\n\",\n",
-    "       \"    <tr>\\n\",\n",
-    "       \"      <th>0</th>\\n\",\n",
-    "       \"      <td>1</td>\\n\",\n",
-    "       \"    </tr>\\n\",\n",
-    "       \"    <tr>\\n\",\n",
-    "       \"      <th>1</th>\\n\",\n",
-    "       \"      <td>2</td>\\n\",\n",
-    "       \"    </tr>\\n\",\n",
-    "       \"    <tr>\\n\",\n",
-    "       \"      <th>2</th>\\n\",\n",
-    "       \"      <td>3</td>\\n\",\n",
-    "       \"    </tr>\\n\",\n",
-    "       \"    <tr>\\n\",\n",
-    "       \"      <th>3</th>\\n\",\n",
-    "       \"      <td>4</td>\\n\",\n",
-    "       \"    </tr>\\n\",\n",
-    "       \"    <tr>\\n\",\n",
-    "       \"      <th>4</th>\\n\",\n",
-    "       \"      <td>5</td>\\n\",\n",
-    "       \"    </tr>\\n\",\n",
-    "       \"  </tbody>\\n\",\n",
-    "       \"</table>\\n\",\n",
-    "       \"</div>\"\n",
-    "      ]\n",
-    "     },\n",
-    "     \"execution_count\": 2,\n",
-    "     \"metadata\": {},\n",
-    "     \"output_type\": \"execute_result\"\n",
-    "    }\n",
-    "   ],\n",
-    "   \"execution_count\": 2\n",
-    "  },\n",
-    "  {\n",
-    "   \"metadata\": {},\n",
-    "   \"cell_type\": \"code\",\n",
-    "   \"outputs\": [],\n",
-    "   \"execution_count\": null,\n",
-    "   \"source\": \"\",\n",
-    "   \"id\": \"9bebc5eafa9d4602\"\n",
-    "  }\n",
-    " ],\n",
-    " \"metadata\": {\n",
-    "  \"kernelspec\": {\n",
-    "   \"display_name\": \"Python 3\",\n",
-    "   \"language\": \"python\",\n",
-    "   \"name\": \"python3\"\n",
-    "  },\n",
-    "  \"language_info\": {\n",
-    "   \"codemirror_mode\": {\n",
-    "    \"name\": \"ipython\",\n",
-    "    \"version\": 2\n",
-    "   },\n",
-    "   \"file_extension\": \".py\",\n",
-    "   \"mimetype\": \"text/x-python\",\n",
-    "   \"name\": \"python\",\n",
-    "   \"nbconvert_exporter\": \"python\",\n",
-    "   \"pygments_lexer\": \"ipython2\",\n",
-    "   \"version\": \"2.7.6\"\n",
-    "  }\n",
-    " },\n",
-    " \"nbformat\": 4,\n",
-    " \"nbformat_minor\": 5\n",
-    "}\n"
+    "# This is a sample Jupyter Notebook\n",
+    "\n",
+    "Below is an example of a code cell. \n",
+    "Put your cursor into the cell and press Shift+Enter to execute it and select the next one, or click 'Run Cell' button.\n",
+    "\n",
+    "Press Double Shift to search everywhere for classes, files, tool windows, actions, and settings.\n",
+    "\n",
+    "To learn more about Jupyter Notebooks in PyCharm, see [help](https://www.jetbrains.com/help/pycharm/ipython-notebook-support.html).\n",
+    "For an overview of PyCharm, go to Help -> Learn IDE features or refer to [our documentation](https://www.jetbrains.com/help/pycharm/getting-started.html)."
    ],
-   "id": "bef6612c0c604d2"
+   "id": "8a77807f92f26ee"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-21T21:52:12.180452Z",
+     "start_time": "2024-11-21T21:52:11.063520Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import pandas as pd\n",
+    "print(\"Hello World!\")\n",
+    "df = pd.DataFrame([1,2,3,4,5])\n",
+    "df"
+   ],
+   "id": "fbc121e30a2defb3",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "   0\n",
+       "0  1\n",
+       "1  2\n",
+       "2  3\n",
+       "3  4\n",
+       "4  5"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 2
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "9bebc5eafa9d4602"
   }
  ],
  "metadata": {
