re-added csv files

--- a/sample.ipynb
+++ b/sample.ipynb
@@ -14,95 +14,27 @@
     "To learn more about Jupyter Notebooks in PyCharm, see [help](https://www.jetbrains.com/help/pycharm/ipython-notebook-support.html).\n",
     "For an overview of PyCharm, go to Help -> Learn IDE features or refer to [our documentation](https://www.jetbrains.com/help/pycharm/getting-started.html)."
    ],
-   "id": "8a77807f92f26ee"
+   "id": "6504b34145bfe112"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-21T21:52:12.180452Z",
-     "start_time": "2024-11-21T21:52:11.063520Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
+    "from IPython.display import display\n",
     "import pandas as pd\n",
-    "print(\"Hello World!\")\n",
-    "df = pd.DataFrame([1,2,3,4,5])\n",
+    "before = pd.read_csv(\"Before_Covid.csv\")\n",
+    "during = pd.read_csv(\"During_Covid.csv\")\n",
+    "after = pd.read_csv(\"After_Covid.csv\")\n",
+    "\n",
+    "df = pd.merge(before, after, how = 'outer')\n",
+    "df = pd.merge(df, during, how = 'outer')\n",
+    "df.drop('open_time', axis=1, inplace=True)\n",
+    "\n",
     "df"
    ],
-   "id": "fbc121e30a2defb3",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello World!\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "   0\n",
-       "0  1\n",
-       "1  2\n",
-       "2  3\n",
-       "3  4\n",
-       "4  5"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 2
+   "id": "8cfadb6a1097cfee"
   },
   {
    "metadata": {},
@@ -110,7 +42,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "9bebc5eafa9d4602"
+   "id": "ed693110474196"
   }
  ],
  "metadata": {
