slight modification ot csv files to make them useable. also added date column and cleaned up data for merged dataframe

--- a/sample.ipynb
+++ b/sample.ipynb
@@ -17,24 +17,263 @@
    "id": "6504b34145bfe112"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-22T04:24:57.416206Z",
+     "start_time": "2024-11-22T04:24:57.360194Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "from IPython.display import display\n",
     "import pandas as pd\n",
+    "import datetime as dt\n",
     "before = pd.read_csv(\"Before_Covid.csv\")\n",
     "during = pd.read_csv(\"During_Covid.csv\")\n",
     "after = pd.read_csv(\"After_Covid.csv\")\n",
     "\n",
+    "before['Covid'] = 'before'\n",
+    "during['Covid'] = 'during'\n",
+    "after['Covid'] = 'after'\n",
+    "\n",
     "df = pd.merge(before, after, how = 'outer')\n",
     "df = pd.merge(df, during, how = 'outer')\n",
-    "df.drop('open_time', axis=1, inplace=True)\n",
     "\n",
+    "df['Source'] = df.apply(lambda x: x['Source'][11:18], axis=1)\n",
+    "df['Date'] = pd.to_datetime(df['Source'], format='%Y-%m')\n",
+    "df.drop('Source', axis=1, inplace=True)\n",
+    "df.drop('open_time', axis=1, inplace=True)\n",
+    "df.drop('close_time', axis=1, inplace=True)\n",
+    "df.drop('taker_buy_quote_volume', axis=1, inplace=True)\n",
+    "df.drop('taker_buy_base_volume', axis=1, inplace=True)\n",
+    "df.drop('quote_volume', axis=1, inplace=True)\n",
+    "df['middle'] = (df['high'] + df['low']) /2\n",
+    "df = df.iloc[:, [7, 0, 1, 8, 2, 3, 4, 5, 6]]\n",
+    "df.drop_duplicates(['Date', 'open', 'high', 'middle', 'low', 'close', 'volume', 'count'], inplace=True)\n",
+    "df.dropna(inplace=True)\n",
     "df"
    ],
-   "id": "8cfadb6a1097cfee"
+   "id": "8cfadb6a1097cfee",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "           Date      open      high     middle       low     close  \\\n",
+       "0    2019-09-01   9930.13   9930.13   9930.130   9930.13   9930.13   \n",
+       "1    2019-09-01   9637.93   9665.05   8830.750   7996.45   8519.67   \n",
+       "2    2019-09-01   8528.12   8724.77   8486.275   8247.78   8435.28   \n",
+       "3    2019-09-01   8434.45   8453.20   8107.535   7761.87   8064.41   \n",
+       "4    2019-09-01   8078.75   8259.96   8059.270   7858.58   8178.73   \n",
+       "...         ...       ...       ...        ...       ...       ...   \n",
+       "1921 2024-10-01  67085.03  68193.22  67558.300  66923.38  67900.00   \n",
+       "1922 2024-10-01  67900.00  70000.00  68801.405  67602.81  69903.53   \n",
+       "1923 2024-10-01  69721.94  73272.49  71457.190  69641.89  72671.11   \n",
+       "1924 2024-10-01  72645.72  72910.61  72175.660  71440.71  72475.12   \n",
+       "1925 2024-10-01  72472.22  72643.28  71221.640  69800.00  70395.71   \n",
+       "\n",
+       "          volume  count   Covid  \n",
+       "0       0.001000      1  before  \n",
+       "1     202.350799   2345  before  \n",
+       "2      55.417971    763  before  \n",
+       "3      41.880079   1023  before  \n",
+       "4      47.142904    990  before  \n",
+       "...          ...    ...     ...  \n",
+       "1921   12.826630   2247   after  \n",
+       "1922   48.189690   6718   after  \n",
+       "1923   92.319670  10826   after  \n",
+       "1924   32.534860   4538   after  \n",
+       "1925   28.095720   2912   after  \n",
+       "\n",
+       "[1865 rows x 9 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>middle</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>count</th>\n",
+       "      <th>Covid</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019-09-01</td>\n",
+       "      <td>9930.13</td>\n",
+       "      <td>9930.13</td>\n",
+       "      <td>9930.130</td>\n",
+       "      <td>9930.13</td>\n",
+       "      <td>9930.13</td>\n",
+       "      <td>0.001000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>before</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2019-09-01</td>\n",
+       "      <td>9637.93</td>\n",
+       "      <td>9665.05</td>\n",
+       "      <td>8830.750</td>\n",
+       "      <td>7996.45</td>\n",
+       "      <td>8519.67</td>\n",
+       "      <td>202.350799</td>\n",
+       "      <td>2345</td>\n",
+       "      <td>before</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2019-09-01</td>\n",
+       "      <td>8528.12</td>\n",
+       "      <td>8724.77</td>\n",
+       "      <td>8486.275</td>\n",
+       "      <td>8247.78</td>\n",
+       "      <td>8435.28</td>\n",
+       "      <td>55.417971</td>\n",
+       "      <td>763</td>\n",
+       "      <td>before</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2019-09-01</td>\n",
+       "      <td>8434.45</td>\n",
+       "      <td>8453.20</td>\n",
+       "      <td>8107.535</td>\n",
+       "      <td>7761.87</td>\n",
+       "      <td>8064.41</td>\n",
+       "      <td>41.880079</td>\n",
+       "      <td>1023</td>\n",
+       "      <td>before</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2019-09-01</td>\n",
+       "      <td>8078.75</td>\n",
+       "      <td>8259.96</td>\n",
+       "      <td>8059.270</td>\n",
+       "      <td>7858.58</td>\n",
+       "      <td>8178.73</td>\n",
+       "      <td>47.142904</td>\n",
+       "      <td>990</td>\n",
+       "      <td>before</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1921</th>\n",
+       "      <td>2024-10-01</td>\n",
+       "      <td>67085.03</td>\n",
+       "      <td>68193.22</td>\n",
+       "      <td>67558.300</td>\n",
+       "      <td>66923.38</td>\n",
+       "      <td>67900.00</td>\n",
+       "      <td>12.826630</td>\n",
+       "      <td>2247</td>\n",
+       "      <td>after</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1922</th>\n",
+       "      <td>2024-10-01</td>\n",
+       "      <td>67900.00</td>\n",
+       "      <td>70000.00</td>\n",
+       "      <td>68801.405</td>\n",
+       "      <td>67602.81</td>\n",
+       "      <td>69903.53</td>\n",
+       "      <td>48.189690</td>\n",
+       "      <td>6718</td>\n",
+       "      <td>after</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1923</th>\n",
+       "      <td>2024-10-01</td>\n",
+       "      <td>69721.94</td>\n",
+       "      <td>73272.49</td>\n",
+       "      <td>71457.190</td>\n",
+       "      <td>69641.89</td>\n",
+       "      <td>72671.11</td>\n",
+       "      <td>92.319670</td>\n",
+       "      <td>10826</td>\n",
+       "      <td>after</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1924</th>\n",
+       "      <td>2024-10-01</td>\n",
+       "      <td>72645.72</td>\n",
+       "      <td>72910.61</td>\n",
+       "      <td>72175.660</td>\n",
+       "      <td>71440.71</td>\n",
+       "      <td>72475.12</td>\n",
+       "      <td>32.534860</td>\n",
+       "      <td>4538</td>\n",
+       "      <td>after</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1925</th>\n",
+       "      <td>2024-10-01</td>\n",
+       "      <td>72472.22</td>\n",
+       "      <td>72643.28</td>\n",
+       "      <td>71221.640</td>\n",
+       "      <td>69800.00</td>\n",
+       "      <td>70395.71</td>\n",
+       "      <td>28.095720</td>\n",
+       "      <td>2912</td>\n",
+       "      <td>after</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1865 rows × 9 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 90
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-22T04:19:19.593350Z",
+     "start_time": "2024-11-22T04:19:19.589814Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "81323aeaef7399f4",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -42,7 +281,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "ed693110474196"
+   "id": "862a8d863bf490f"
   }
  ],
  "metadata": {
